--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,54 +1,55 @@
-.footer-white
-	.container
-		.row
-			.col-sm-3
-				h3 Overview
-				ul
-					li 
-						a(href='#') Features
-					li 
-						a(href='#') Services
-					li 
-						a(href='#') Pricing
-					li 
-						a(href='#') Support
-					li 
-						a(href='#') Blog
-					li 
-						a(href='#') Coming Soon
-			.col-sm-3
-				h3 Menu
-				ul
-					li 
-						a(href='#') About Us
-					li 
-						a(href='#') Contact Us
-					li 
-						a(href='#') Pricing
-					li 
-						a(href='#') Jobs
-					li 
-						a(href='#') Portfolio
-					li 
-						a(href='#') Status
-			.col-sm-2.menu
-				h3 Social
-				ul
-					li 
-						a(href='#') Twitter
-					li 
-						a(href='#') Google+
-					li 
-						a(href='#') Facebook
-					li 
-						a(href='#') LinkedIn
-			.col-sm-4.newsletter
-				.signup.clearfix
-					p.text-left Stay informed, sign up for the newsletter.
-					.input-group
-						input(type='text', class='form-control', placeholder='Email Address')
-						span.input-group-btn
-							button(class='btn btn-primary', id='search-btn', type='button') Sign Up
+footer
+	#footer-white
+		.container
+			.row
+				.col-sm-3.menu
+					h3 Overview
+					ul
+						li 
+							a(href='#') Features
+						li 
+							a(href='#') Services
+						li 
+							a(href='#') Pricing
+						li 
+							a(href='#') Support
+						li 
+							a(href='#') Blog
+						li 
+							a(href='#') Coming Soon
+				.col-sm-3.menu
+					h3 Menu
+					ul
+						li 
+							a(href='#') About Us
+						li 
+							a(href='#') Contact Us
+						li 
+							a(href='#') Pricing
+						li 
+							a(href='#') Jobs
+						li 
+							a(href='#') Portfolio
+						li 
+							a(href='#') Status
+				.col-sm-2.menu
+					h3 Social
+					ul
+						li 
+							a(href='#') Twitter
+						li 
+							a(href='#') Google+
+						li 
+							a(href='#') Facebook
+						li 
+							a(href='#') LinkedIn
+				.col-sm-4.newsletter
+					.signup.clearfix
+						p.text-left Stay informed, sign up for the newsletter.
+						.input-group
+							input(type='text', class='form-control', placeholder='Email Address')
+							span.input-group-btn
+								button(class='btn btn-primary', id='search-btn', type='button') Sign Up
 section(id='footer-section')
 	.container
 		.row
@@ -69,7 +70,7 @@ section(id='footer-section')
 							a(href='https://plus.google.com/110342376226117431083', title='Google+', data-placement='top', data-rel='tooltip', class='google-plus', target='_blank') <i class="fa fa-google-plus"></i>
 						li
 							a(href='https://www.linkedin.com/company/iso-group-inc', title='LinkedIn', data-placement='top', data-rel='tooltip', class='linkedin', target='_blank') <i class="fa fa-linkedin"></i>
-	
+		
 
 link(rel='stylesheet', href='/css/footer.css')
 
