--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-	div.container
-		h1!= title
-		p Hello World
+	.content
+		.container
+			h1!= title
+			p Hello World
