--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,9 +14,7 @@ html
 			link(rel='stylesheet', href='/css/bootstrap.css')
 			link(rel='stylesheet', href='/css/style.css')
 			link(rel='stylesheet', href='/css/menu.css')
-			| <style>
-			| body { padding-top: 60px; background: #ffffff;}
-			| </style>
+			link(rel='stylesheet', href='/css/uikit.css')
 			
 	body
 		include header
