--- a/views/header.jade
+++ b/views/header.jade
@@ -1,19 +1,23 @@
-.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+header#stuck_container
 	.container
-		.navbar-header
-			button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-				span.icon-bar
-				span.icon-bar
-				span.icon-bar
-			a.navbar-brand(href="/")
-				| ISO Parts
-		.collapse.navbar-collapse
-			ul.nav.navbar-nav
-				li.active
-					a(href="/") Home
-				li
-					a(href="/about") About
-				li
-					a(href="/contact") Contact
-				li
-					a(href="/nsn") NSN
+		nav.navbar.navbar-default.navbar-static-top.tm_navbar.clearfix(role='navigation')
+			.col-md-2
+				a(href='/' class='.navbar-brand')
+						img(src='/images/iso-parts-logo.png', id='')
+			.navbar-header
+				button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+					span.icon-bar
+					span.icon-bar
+					span.icon-bar				
+			.col-md-6
+			.col-md-4
+				.collapse.navbar-collapse
+					ul.nav.sf-menu.clearfix
+						li.active
+							a(href='/') Home
+						li
+							a(href='/about') About
+						li
+							a(href='/contact') Contact
+						li
+							a(href='/nsn') NSN
